Fixed alignment issues with horizontal properties

--- a/monopoly-board/style.css
+++ b/monopoly-board/style.css
@@ -82,8 +82,7 @@ body {
 
 h6 .rotate-90,
 h6 .rotate-270 {
-    writing-mode: vertical-lr;
-    width: 1rem;
+    max-width: 1vw;
 }
 
 .rotate-180 {
@@ -107,6 +106,7 @@ h6 .rotate-270 {
     font-family: 'Monopoly';
     text-transform: uppercase;
     font-size: 1vw;
+    text-wrap: nowrap;
 }
 
 .bigger-font {
@@ -129,12 +129,19 @@ h6 .rotate-270 {
 
 .corner-image {
     width: 17vw;
-    margin-left: -1.4vw;
+    margin-left: -1.45vw;
 }
 
 .center-image {
     width: 60vw;
-    margin-left: 3vw;
+    margin-left: 2vw;
+}
+
+.rotated-text-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1vw;
 }
 
 .text-container:hover {
